force-app/main/default/objects/copado__MC_Notification__mdt/copado__MC_Notification__mdt.object-meta.xml
<CustomObject>
    <description>This is the notification to be sent from Copado.</description>
    <label>MC Notification</label>
    <pluralLabel>MC Notifications</pluralLabel>
</CustomObject>