force-app/main/default/objects/copado__MC_Notification__mdt/fields/copado__Active__c.field-meta.xml
<CustomField>
    <fullName>copado__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, notification is avaiable for use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>