force-app/main/default/objects/copado__MC_Notification__mdt/fields/copado__Description__c.field-meta.xml
<CustomField>
    <fullName>copado__Description__c</fullName>
    <description>Description of the Notification</description>
    <inlineHelpText>Description of the Notification</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>