force-app/main/default/objects/copado__MC_Notification__mdt/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>copado__Active__c</columns>
    <columns>copado__Subject__c</columns>
    <columns>copado__Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>